--- a/Upshift.html
+++ b/Upshift.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upshift Swap Shop Case Study | Pearl Bharti</title>
     <meta content="Upshift Swap Shop" property="og:title" />
-    <link href="rachel-how.webflow.113d3075a.min.css" rel="stylesheet" type="text/css" />
+    <link href="pearlprojects.min.css" rel="stylesheet" type="text/css" />
     <style>
         @media (min-width:992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="3d5bdc31-b4a6-ba0b-3fae-b433c14831e7"] {
