--- a/recwell.html
+++ b/recwell.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify's User Research Case Study | Pearl Bharti</title>
-    <meta content="Upshift Swap Shop" property="og:title" />
+    <title>Recreation & Wellbeing, UW Madison Redesign | Pearl Bharti</title>
+    <meta content="RecWell Redesign" property="og:title" />
     <link href="pearlprojects.min.css" rel="stylesheet" type="text/css" />
     <style>
         @media (min-width:992px) {
