schneider case study

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="ui header headertext">
                 <h1>Hi, I am Pearl</h1>
             </div>
-            <div id="aboutMe" class="subheader">// portfolio 2020 //</div>
+            <div id="aboutMe" class="subheader">line</div>
             <a href="assets/Resume.pdf" target="_blank"><button class="ctaResume" id="ctaResume">RESUME</button></a>
         </div>
     </div>
