--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 
 <body>
+    <!-- <navbar /> -->
     <nav data-toggled="false" data-transitionable="false">
         <div id="nav-logo-section" class="nav-section">
             <a href="#">
-              <!-- Insert your SVG here with half size -->
               <svg width="24" height="30.5" viewBox="0 0 48 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="35.5" cy="58.5" r="2.5" fill="#D9D9D9"/>
                 <path d="M23.5039 3.15353C34.3713 1.77892 46.9561 9.82562 44.7448 19.6485C42.8219 28.1901 23.5039 30.187 23.5039 30.187M23.5039 3.15353C23.5039 13.7108 23.5039 30.187 23.5039 30.187M23.5039 3.15353C13.6244 2.2372 1.06372 10.0986 3.2509 19.6485C5.13537 27.8768 23.5039 30.187 23.5039 30.187M23.5039 30.187C23.5039 30.187 24.9858 54.0132 23.5039 57.2205C22.0219 60.4278 3.71252 53.2646 3.2509 44.391C2.77298 35.2043 23.5039 30.187 23.5039 30.187Z" stroke="white" stroke-width="5"/>
@@ -100,10 +100,11 @@
 
         <div class="header-text">
             <div class="ui header headertext">
-                <h1>Hi, I am Pearl</h1>
+                <h1>hello, I'm Pearl</h1>
             </div>
-            <div id="aboutMe" class="subheader">line</div>
-            <a href="assets/Resume.pdf" target="_blank"><button class="ctaResume" id="ctaResume">RESUME</button></a>
+            <div id="aboutMe" class="subheader">I'm a User Experience Designer and Developer. I enjoy creating inclusive, clean, and human-centered designs.
+Currently, a graduate student at University of Wisconsin-Madison.</div>
+            <!-- <a href="assets/Resume.pdf" target="_blank"><button class="ctaResume" id="ctaResume">RESUME</button></a> -->
         </div>
     </div>
 
