--- a/schneider.html
+++ b/schneider.html
@@ -117,12 +117,12 @@
                 <div class="mw-650">
                     <div class="styled-rich-text w-richtext">
                         <p> 
-                            I served as the Product Owner and UI/UX Designer, collaborating closely with 
+                           As the Product Owner and UI/UX Designer, my team is collaborating closely with 
                             Schneider National to enhance their freight search platform. 
-                            I led the project, identifying user pain points and implementing 
+                            I am leading the project, identifying user pain points and implementing 
                             solutions like multi-capacity selection, desired length of haul selection, ease for truck weight compliance, mobile optimization, and intuitive, 
                             above-the-fold search features. Once completed, I will present these improvements 
-                            at Schneider’s headquarters in Green Bay along with my team, showcasing how these design changes add 
+                            at Schneider’s headquarters in Green Bay, WI along with my team, showcasing how these design changes add 
                             flexibility, relevance, and ease of use to support Schneider’s operational 
                             efficiency goals.
 
