--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
           <i class="fa-solid fa-bars"></i>
         </button>
     </nav>
+
+    
       
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -102,8 +104,8 @@
             <div class="ui header headertext">
                 <h1>hello, I'm Pearl</h1>
             </div>
-            <div id="aboutMe" class="subheader">I'm a User Experience Designer and Developer. I enjoy creating inclusive, clean, and human-centered designs.
-Currently, a graduate student at University of Wisconsin-Madison.</div>
+            <div id="aboutMe" class="subheader">I'm a User Experience Designer and Front-End Developer. I enjoy creating inclusive, clean, and human-centered designs.
+</div>
             <!-- <a href="assets/Resume.pdf" target="_blank"><button class="ctaResume" id="ctaResume">RESUME</button></a> -->
         </div>
     </div>
